2014-09-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.text (Scrolling Commands): PageUp and PageDown can
	change the node (changed in 4.12 release).

2014-09-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (N_Unstored): New flag.
	* info/session.c (info_split_window): Copy 'nodename' and 'references'
	fields if node is marked with N_Unstored, instead of N_IsInternal.
	* info/nodemenu.c (list_visted_nodes),
	* info/indices.c (info_virtual_index),
	* info/footnotes.c (make_footnotes_node): Mark generated nodes with
	N_Unstored.
	* info/dir.c (build_dir_node),
	* info/man.c (get_manpage_node): Mark generated nodes with
	N_IsInternal, to disable attempting to get another node in a
	containing file.

2014-09-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (copy_converting) <EINVAL>: Try converting again
	if input was incomplete, instead of degrading to ASCII.

2014-09-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.h: Don't include other header files.
	* info: All *.c and *.h files: Include necessary header files.
	Include "doc.h" instead of "infomap.h" to avoid problem with
	header file include cycle.
	* info/footnotes.c (info_get_or_remove_footnotes): Call info_error
	instead of inform_in_echo_area.
	* info/info.h, info/session.h (DECLARE_INFO_COMMAND): Macro moved
	between files.
	* info/info.h, info/session.h: Declarations of read_function_name,
	show_error_node moved.
	* info/makedoc.c (doc_header_1, main): Add include of "window.h" to
	generated files.
	* info/session.c, info/variables.c (info_scroll_choices)
	(scroll_last_node_choices): Moved between files and declared static.
	* info/variables.h: Declare 'mouse_protocol'.

	* info/info.c (add_file_directory_to_path): Declared static.

2014-09-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c: Move "Garbage Collection" and "Navigation of
	document structure" sections to reduce need for forward function
	declarations.